[workspace]
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    "gazebo/display_container",
    "gazebo/dupe",
    "starlark",
    "starlark_bin",
    "starlark_derive",
    "starlark_lsp",
    "starlark_map",
    "starlark_syntax",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/facebookexperimental/starlark-rust"

[workspace.dependencies]
allocative = { version = "0.3.3", path = "allocative/allocative" }
allocative_derive = { version = "0.3.3", path = "allocative/allocative_derive" }
cmp_any = { version = "0.8.1", path = "gazebo/cmp_any" }
display_container = { version = "0.9.0", path = "gazebo/display_container" }
dupe = { version = "0.9.0", path = "gazebo/dupe" }

starlark_lsp = { version = "0.9", path = "starlark_lsp" }
starlark_map = { version = "0.9", path = "starlark_map" }
starlark_syntax = { version = "0.9", path = "starlark_syntax" }

anyhow = "1.0.65"
ctor = "0.1.26"
derivative = "2.2"
derive_more = "0.99.3"
either = "1.8"
equivalent = "1.0.0"
indenter = "0.3.3"
memchr = "2.4.1"
proc-macro2 = "1.0"
quote = "1.0.3"
syn = "2"
