[workspace]
members = [
    "allocative/allocative",
    "allocative/allocative_derive",
    "gazebo/gazebo",
    "gazebo/display_container",
    "gazebo/dupe",
    "gazebo/strong_hash",
    "gazebo/strong_hash_derive",
    "pagable",
    "pagable_derive",
    "starlark",
    "starlark_bin",
    "starlark_derive",
    "starlark_js_example",
    "starlark_lsp",
    "starlark_map",
    "starlark_syntax",
]
resolver = "2"

[workspace.package]
license = "Apache-2.0"
repository = "https://github.com/facebook/starlark-rust"

[workspace.dependencies]
allocative = { version = "0.3.5", path = "allocative/allocative" }
cmp_any = { version = "0.8.1", path = "gazebo/cmp_any" }
display_container = { version = "0.9.0", path = "gazebo/display_container" }
dupe = { version = "0.9.1", path = "gazebo/dupe" }
gazebo = { path = "gazebo/gazebo" }
strong_hash = { path = "gazebo/strong_hash" }

starlark_lsp = { version = "0.14", path = "starlark_lsp" }
starlark_map = { version = "0.14", path = "starlark_map" }
starlark_syntax = { version = "0.14", path = "starlark_syntax" }

anyhow = "1.0.102"
ctor = "1.0.5"
derivative = "2.2"
derive_more = { version = "1.0.0", features = ["full"] }
either = "1.8"
equivalent = "1.0.2"
erased-serde = "0.4.10"
indenter = "0.3.4"
inventory = "0.3.24"
memchr = "2.8.0"
num-bigint = { version = "0.4.6", features = ["serde"] }
proc-macro2 = "1.0.106"
quote = "1.0.45"
ref-cast = "1.0.18"
relative-path = { version = "1.7.0", features = ["serde"] }
syn = { version = "2.0.117", features = ["full"] }

pagable = { version = "0.3.3", path = "pagable", features = ["tokio"] }
# dependencies of pagable
async-trait = "0.1.86"
blake3 = { version = "=1.8.2", features = ["default", "rayon", "std", "traits-preview"] }
bytemuck = { version = "1.25", features = ["const_zeroed", "derive", "min_const_generics", "must_cast", "nightly_stdsimd"] }
dashmap = "6.1.0"
indexmap = { version = "2.14.0", features = ["serde"] }
once_cell = "1.21.4"
parking_lot = { version = "0.12.1", features = ["send_guard"] }
postcard = { version = "1.0.8", features = ["use-crc", "use-std"] }
regex = "1.12.3"
sequence_trie = "0.3.6"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = { version = "1.0.140", features = ["raw_value"] }
sled = "0.34.7"
smallvec = { version = "1.15", features = ["const_generics"] }
sorted_vector_map.git = "https://github.com/facebookexperimental/rust-shed"
sorted_vector_map.version = "0.2"
static_assertions = "1.1.0"
static_interner = "0.1.2"
take_mut = "0.2"
tokio = { version = "1.52.1", features = ["full", "test-util", "tracing"] }
triomphe = "0.1.11"
