[package]
name = "starlark"
edition = "2018"
version = "0.4.0-pre"
license = "Apache-2.0"
description = "An implementation of the Starlark language in Rust."
documentation = "https://docs.rs/starlark"
repository = "https://github.com/facebookexperimental/starlark-rust"
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Facebook"
]
build = "build.rs"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
categories = ["parser-implementations", "development-tools"]

[build-dependencies]
lalrpop = "0.19"

[dependencies]
annotate-snippets = { version = "0.9.0", features = ["color"] }
anyhow = "1.0.26"
codemap = "0.1.1"
derivative = "2.1.1"
derive_more = "0.99"
lalrpop-util = "0.19.1"
indexmap = "1.6"
regex = "1.3.1"
itertools = "0.9"
once_cell = "1.3"
either = "1.5"
bumpalo = "3.4"
void = "1.0"
paste = "1.0"
static_assertions = "1.1.0"
thiserror = "1.0.9"
starlark_module = { path = "../starlark_module" }
# @oss-disable: gazebo = { path = "../../gazebo/gazebo", features =  ["str_pattern_extensions"] }
gazebo = { git = "https://github.com/facebookincubator/gazebo", features =  ["str_pattern_extensions"] } # @oss-enable
# @oss-disable: linter = { path = "../../linter/linter" }
structopt = "0.3.0"
walkdir = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustyline = "6.3.0"
maplit = "1.0.2"
criterion = "0.3"
tower-lsp = "0.13.3"
tokio = {version = "0.2", features = ["io-std"]}

[features]
# @oss-disable: default = ["custom_linter"]
# oss-enable: default = []
custom_linter = []

[[bin]]
name = "starlark"
path = "bin/main.rs"

[[bench]]
name = "main"
harness = false
