[package]
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Stepan Koltsov <stepan.koltsov@gmail.com>",
    "Facebook",
]
build = "build.rs"
categories = ["parser-implementations", "development-tools"]
description = "An implementation of the Starlark language in Rust."
documentation = "https://docs.rs/starlark"
edition = "2024"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
license = "Apache-2.0"
name = "starlark"
repository = "https://github.com/facebook/starlark-rust"
version = "0.13.0"

[features]
default = []
pagable = []

[dependencies]
anyhow = "1"
bumpalo = "3.8"
debugserver-types = "0.5"
derivative = "2.2"
derive_more.workspace = true
display_container = { workspace = true }
dupe = { workspace = true }
either = "1.8"
erased-serde = "0.3"
hashbrown = { version = "0.16.1" }
indexmap = "2.2"
inventory = "0.3"
itertools = "0.14"
maplit = "1"
memoffset = "0.6"
num-bigint = { workspace = true }
num-traits = "0.2"
once_cell = "1.8"
paste = "1.0"
ref-cast = "1"
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
sled = "0.34"
starlark_derive = { version = "0.13.0", path = "../starlark_derive" }
starlark_map = { version = "0.13.0", path = "../starlark_map", features = ["pagable_dep"] }
starlark_syntax = { version = "0.13.0", path = "../starlark_syntax" }
static_assertions = "1"
strsim = "0.10"
textwrap = "0.16"
thiserror = "2"

allocative = { workspace = true, features = ["bumpalo", "num-bigint"] }
cmp_any = { workspace = true }
pagable = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rustyline = "18"

[dev-dependencies]
rand = "0.10"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(rust_nightly)", "cfg(starlark_require_heap_names)", "cfg(feature, values(\"pagable\", \"pagable_dep\"))"] }
