[package]
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Facebook",
]
categories = ["parser-implementations", "development-tools"]
description = "starlark binary"
documentation = "https://docs.rs/starlark"
edition = "2024"
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"
name = "starlark_bin"
repository = "https://github.com/facebook/starlark-rust"
version = "0.13.0"

[dependencies]
dupe = { workspace = true }

starlark = { version = "0.13.0", path = "../starlark" }
starlark_lsp = { version = "0.13.0", path = "../starlark_lsp" }
starlark_map = { version = "0.13.0", path = "../starlark_map" }

anyhow = "1"
argfile = "0.2"
clap = { version = "4.0.7", features = ["derive", "wrap_help"] }
debugserver-types = "0.5"
either = "1.8"
globset = "0.4"
itertools = "0.14"
lsp-types = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
walkdir = "2.3"

[[bin]]
doc = false
name = "starlark"
path = "bin/main.rs"
