[package]
name = "starlark_derive"
version = "0.6.0"
edition = "2021"
license = "Apache-2.0"
description = "Derive helpers for the starlark package."
documentation = "https://docs.rs/starlark_derive"
repository = "https://github.com/facebookexperimental/starlark-rust"
authors = ["Facebook"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.33", features = ["full", "extra-traits"] }
# @oss-disable: gazebo = { path = "../../gazebo/gazebo", features =  ["str_pattern_extensions"] }
gazebo = { version = "0.2.1", features =  ["str_pattern_extensions"] } # @oss-enable
# @oss-disable: gazebo_lint = { path = "../../gazebo_lint/gazebo_lint", optional = true }
gazebo_lint = { version = "0.1", optional = true } # @oss-enable
quote = "1.0.3"

[features]
# @oss-disable: default = ["gazebo_linter"]
gazebo_linter = ["gazebo_lint"]
