[package]
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Facebook",
]
categories = ["parser-implementations", "development-tools"]
description = "LSP bindings for starlark"
documentation = "https://docs.rs/starlark"
edition = "2024"
keywords = ["starlark", "skylark", "language", "interpreter"]
license = "Apache-2.0"
name = "starlark_lsp"
repository = "https://github.com/facebook/starlark-rust"
version = "0.13.0"

[dependencies]
anyhow = "1"
derivative = "2.2"
derive_more.workspace = true
dupe = { workspace = true }
itertools = "0.14"
lsp-server = "0.7"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"

starlark = { version = "0.13.0", path = "../starlark" }
starlark_syntax = { version = "0.13.0", path = "../starlark_syntax" }

[dev-dependencies]
maplit = "1"
regex = "1"
textwrap = "0.16"
