[package]
name = "starlark_module"
version = "0.4.0"
edition = "2018"
license = "Apache-2.0"
description = "Derive helpers for the starlark package."
documentation = "https://docs.rs/starlark_module"
repository = "https://github.com/facebookexperimental/starlark-rust"
authors = ["Facebook"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = { version = "1.0.33", features = ["full", "extra-traits"] }
# @oss-disable: gazebo = { path = "../../gazebo/gazebo", features =  ["str_pattern_extensions"] }
gazebo = { version = "0.2.1", features =  ["str_pattern_extensions"] } # @oss-enable
quote = "1.0.3"
