[package]
authors = [
    "Damien Martin-Guillerez <dmarting@google.com>",
    "Facebook",
]
categories = ["parser-implementations", "development-tools"]
description = "Starlark language AST"
documentation = "https://docs.rs/starlark"
edition = "2024"
keywords = ["starlark", "skylark", "bazel", "language", "interpreter"]
license = "Apache-2.0"
name = "starlark_syntax"
repository = "https://github.com/facebook/starlark-rust"
version = "0.13.0"

[build-dependencies]
lalrpop = { workspace = true }

[dependencies]
annotate-snippets = { version = "0.9.0", features = [] }
anyhow = { workspace = true }
derivative = { workspace = true }
derive_more = { workspace = true }
lalrpop-util = { workspace = true }
logos = "0.15"
lsp-types = { workspace = true }
memchr = { workspace = true }
num-bigint = { workspace = true }
num-traits = "0.2"
once_cell = "1.8"
thiserror = "2"

allocative = { workspace = true }
dupe = { workspace = true }
pagable = { workspace = true }
starlark_map = { version = "0.13.0", path = "../starlark_map" }

[dev-dependencies]
serde_json = "1.0"
